--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@
 
 # dependencies
 /node_modules
-node_modules
 
 # profiling files
 chrome-profiler-events*.json
@@ -44,6 +43,6 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
-node_modules
-node_modules
+
+# node modules
 node_modules
