--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.0.4",
+    "@angular/cli": "~13.0.4",
     "@types/jasmine": "~3.8.0",
     "@types/jquery": "^3.5.7",
     "@types/node": "^12.11.1",
