--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "typescript": "~4.4.4",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.0.4",
@@ -36,13 +37,15 @@
     "@types/jasmine": "~3.8.0",
     "@types/jquery": "^3.5.7",
     "@types/node": "^12.11.1",
+    "@types/uuid": "^8.3.3",
     "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0"
+    "karma-jasmine-html-reporter": "~1.7.0",
+    "uuid": "^8.3.2"
   },
   "engines": {
     "node": "14.18.0",
